# curaz-api-server

./: .gitignore  .python-version  README.md  docker-compose.yml  dockerfile  manage.py  pyproject.toml
.github/workflows/: curaz-cicd.yml
app/: main.py
